--- a/pages/explore.html
+++ b/pages/explore.html
@@ -40,17 +40,17 @@
  			<div class="vid_class">
  				<h3>Videos for Students till Class 10th</h3>
  	 			<div class="one grid_4 alpha">
-					<a href="../video/class 10-stati.mp4"><img src="../img/stati.jpg" width="260" height="138"></a>
+					<a href="<img src="../img/stati.jpg" width="260" height="138><img src="../img/stati.jpg" width="260" height="138"></a>
 					<h4>Class 10</h4>
 					<p>Mathematics - Statistics</p>
 				</div>
 				<div class="two grid_4">
-					<a href="../video/class10-surfacearea.mp4"><img src="../img/area.png" width="260" height="138"></a>
+					<a href="https://www.youtube.com/watch?v=9tOYjFniYxo"><img src="../img/area.png" width="260" height="138"></a>
 					<h4>Class 9</h4>
 					<p>Mathematics - Surface Area</p>
 				</div>
 				<div class="three grid_4 omega">
-					<a href="../video/Polynomials.mp4"><img src="../img/poly.jpg" width="260" height="138"></a>
+					<a href="https://www.youtube.com/watch?v=ffLLmV4mZwU"><img src="../img/poly.jpg" width="260" height="138"></a>
 					<h4>Class 8</h4>
 					<p>Mathematics - Polynomials</p>
 				</div>
@@ -61,12 +61,12 @@
 			<div class="vid_prg">
  				<h3>Videos about programming..</h3>
 				<div class="one grid_4 alpha">
-					<a href="../video/java.mp4"><img src="../img/java.jpg" width="260" height="138"></a>
+					<a href="https://www.youtube.com/watch?v=KVlXccl-XBA"><img src="../img/java.jpg" width="260" height="138"></a>
 					<h4>Java Programming</h4>
 					<p>Introduction to Java</p>
 				</div>
 				<div class="two grid_4">
-					<a href="../video/c.mp4"><img src="../img/c_1.jpg" width="260" height="138"></a>
+					<a href="https://www.youtube.com/watch?v=-CpG3oATGIs"><img src="../img/c_1.jpg" width="260" height="138"></a>
 					<h4>C Programming</h4>
 					<p>Introduction to OOP</p>
 				</div>
@@ -92,7 +92,7 @@
 					<p>Learning about C programming</p>
 				</div>
 				<div class="three grid_4 omega">
-					<a href="../pdf/javascript.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true" fa-3x></i></a>
+					<a href="https://www.youtube.com/watch?v=ot9LoXNSqLU"><i class="fa fa-file-pdf-o" aria-hidden="true" fa-3x></i></a>
 					<h4>Javascript</h4>
 					<p>Few things need to learn about javascript</p>
 				</div>
